# Chotso

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
data/: checkerboard.txt
include/: chip8.h  common.h  helpers.h  instructions.h  stack.h
src/: chip8.c  helpers.c  instructions.c  main.c  parser.c  stack.c
